--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
-modarchivename=MCTImmersiveTechnology
-modgroup=mctmods.immersivetechnology
-modversion=1.7
-modsubversion=45
+org.gradle.daemon=false
+
+mod_id=Immersive Technology
+mod_archivename=MCTImmersiveTechnology
+mod_group=mctmods.immersivetechnology
+mod_version=2.0
+mod_subversion=0
+mod_author=tgstyle
